# harmo-climate

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
docs/: parameters.md
scripts/: activate.sh  display_all.sh  regenerate_all.sh  regenerate_models.sh  setup.sh  template_all.sh
src/harmoclimate/: __init__.py  config.py  core.py  data_ingest.py  display.py  evaluation.py  metadata.py  pipeline.py  psychrometrics.py  template_cpp.py  training.py
